--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
 
 "browser_action": {
 "default icon": "icon.png",
-"default_popup": "window.html",
+"default_popup": "InitialOpeningAesthetics.html",
 "default locale": "en",
 "description": "Global Wellness Extension",
 "icons": {}
